[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-native-im-sdk-python"
version = "0.1.0"
description = "Python SDK for Agent-Native IM Platform - Let any AI Agent connect in ~10 lines of code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_im_python", "agent_native_im_sdk_python"]

[project.urls]
Repository = "https://github.com/wzfukui/agent-native-im-sdk-python"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
